Adding and removing item from cart | Dynamically changing price and number of items in cart

--- a/src/components/item/item.component.scss
+++ b/src/components/item/item.component.scss
@@ -1,6 +1,6 @@
 .item-container {
-  width: 956px;
-  height: 138px;
+  width: 996px;
+  height: 130px;
   padding: 20px 0;
 }
 
@@ -26,5 +26,10 @@
 
 .trash-icon {
   color: #d00511;
+  cursor: pointer;
+}
+
+.add-icon {
+  color: #58c22e;
   cursor: pointer;
 }
