--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <app-navbar [cartAmount]="totalItems"></app-navbar>
 
   <div class="main-container">
-    <h3 class="cart-title">Carrinho</h3>
+    <h3 class="cart-title">Your Items</h3>
 
     <div class="d-flex justify-content-between">
       <div class="header-image-container">
