--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,33 +1,8 @@
 <div class="d-flex flex-column align-items-center w-100 h-100">
-  <app-navbar [cartAmount]="totalItems"></app-navbar>
+  <app-navbar></app-navbar>
 
   <div class="main-container">
-    <h3 class="cart-title">Your Items</h3>
-
-    <div class="d-flex justify-content-between">
-      <div class="header-image-container">
-        <span class="header-text">Item</span>
-      </div>
-      <div class="header-name-blank-container"></div>
-      <div class="header-amount-container">
-        <span class="header-text">Amount</span>
-      </div>
-      <div class="header-price-container">
-        <span class="header-text">Price</span>
-      </div>
-      <div class="header-icon-blank-container"></div>
-    </div>
-
-    <div class="cart-items-container">
-      <div *ngFor="let item of items" class="item-container">
-        <app-item [item]="item" (changeAmount)="ChangeAmount($event)"></app-item>
-      </div>
-    </div>
-
-    <div *ngIf="totalItems > 0" class="d-flex justify-content-end total-container">
-      <span class="total-text">Total ({{totalItems}}items):</span>
-      <span class="total-price-text">{{totalPrice | currency}}</span>
-    </div>
+    <router-outlet></router-outlet>
   </div>
 
 </div>
