Products list and new products

--- a/src/app/components/carousel/carousel.component.html
+++ b/src/app/components/carousel/carousel.component.html
@@ -1,4 +1,4 @@
-<ngb-carousel [interval]="9999999999999999" *ngIf="products.length > 0" class="carousel">
+<ngb-carousel [interval]="6000" *ngIf="products.length > 0" class="carousel">
 	<ng-template ngbSlide *ngFor="let product of products">
     <div class="slide-container">
       <div class="image-container">
