--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,9 +1,9 @@
 <div class="navbar-container d-flex justify-content-between">
-  <h1>Angular Cart</h1>
+  <h1 [routerLink]="''">Angular Cart</h1>
 
   <div class="icons-container">
     <div [matBadge]="cartAmount" class="cart-container">
-      <fa-icon class="cart-icon" [icon]="faCartShopping" size="2xl"></fa-icon>
+      <fa-icon [routerLink]="'cart'" class="cart-icon" [icon]="faCartShopping" size="2xl"></fa-icon>
     </div>
     <div class="user-container">
       <fa-icon class="user-icon" [icon]="faUser" size="2xl"></fa-icon>
