--- a/src/app/components/item/item.component.html
+++ b/src/app/components/item/item.component.html
@@ -9,7 +9,7 @@
     <ng-template #selectAmount>
       <div class="amount-select">
         <mat-form-field appearance="outline">
-          <mat-select   [(value)]="selectedAmount" (selectionChange)="AmountChanged(item.id, $event)">
+          <mat-select   [(value)]="selectedAmount" (selectionChange)="AmountChanged(item.product.id, $event)">
             <mat-option *ngFor="let amountItem of amountItems" [value]="amountItem">
               {{amountItem}}
             </mat-option>
@@ -23,9 +23,9 @@
   </div>
 
   <div class="d-flex justify-content-center align-items-center">
-    <fa-icon matTooltip="Remove from cart" matTooltipPosition="above" *ngIf="item.amount > 0; else addIcon" class="trash-icon" [icon]="faTrash" size="lg" (click)="RemoveItem(item.id)"></fa-icon>
+    <fa-icon matTooltip="Remove from cart" matTooltipPosition="above" *ngIf="item.amount > 0; else addIcon" class="trash-icon" [icon]="faTrash" size="lg" (click)="RemoveItem(item.product.id)"></fa-icon>
     <ng-template #addIcon>
-      <fa-icon matTooltip="Add to cart" matTooltipPosition="above" class="add-icon" [icon]="faPlus" size="lg" (click)="AddItem(item.id)"></fa-icon>
+      <fa-icon matTooltip="Add to cart" matTooltipPosition="above" class="add-icon" [icon]="faPlus" size="lg" (click)="AddItem(item.product.id)"></fa-icon>
     </ng-template>
   </div>
 </div>
