--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -11,6 +11,6 @@
     </div>
   </div>
   <div class="button-container">
-    <button [routerLink]="'cart'" mat-flat-button>Add to cart</button>
+    <app-add-cart-button [amount]="1" [productId]="product.id" ></app-add-cart-button>
   </div>
 </div>
