Fix add item to cart and change amount

--- a/src/app/components/item/item.component.html
+++ b/src/app/components/item/item.component.html
@@ -9,7 +9,7 @@
     <ng-template #selectAmount>
       <div class="amount-select">
         <mat-form-field appearance="outline">
-          <mat-select   [(value)]="selectedAmount" (selectionChange)="AmountChanged(item.product.id, $event)">
+          <mat-select   [(value)]="item.amount" (selectionChange)="AmountChanged(item.product.id, $event)">
             <mat-option *ngFor="let amountItem of amountItems" [value]="amountItem">
               {{amountItem}}
             </mat-option>
