--- a/src/app/components/item/item.component.html
+++ b/src/app/components/item/item.component.html
@@ -23,9 +23,6 @@
   </div>
 
   <div class="d-flex justify-content-center align-items-center">
-    <fa-icon matTooltip="Remove from cart" matTooltipPosition="above" *ngIf="item.amount > 0; else addIcon" class="trash-icon" [icon]="faTrash" size="lg" (click)="RemoveItem(item.product.id)"></fa-icon>
-    <ng-template #addIcon>
-      <fa-icon matTooltip="Add to cart" matTooltipPosition="above" class="add-icon" [icon]="faPlus" size="lg" (click)="AddItem(item.product.id)"></fa-icon>
-    </ng-template>
+    <fa-icon matTooltip="Remove from cart" matTooltipPosition="above" *ngIf="item.amount > 0" class="trash-icon" [icon]="faTrash" size="lg" (click)="RemoveItem()"></fa-icon>
   </div>
 </div>
