--- a/src/app/pages/cart/cart.component.scss
+++ b/src/app/pages/cart/cart.component.scss
@@ -1,3 +1,10 @@
+.cart-title {
+  color: #0083ca;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 48px;
+}
+
 .cart-items-container {
   width: 956px;
 }
