--- a/src/app/components/details-infos/details-infos.component.html
+++ b/src/app/components/details-infos/details-infos.component.html
@@ -4,7 +4,18 @@
   <span class="original-value" *ngIf="product.price.discount > 0">{{product.price.originalValue | currency}}</span>
   <span class="value">{{product.price.value | currency}}</span>
 
+  <div class="amount-select">
+    <span>Select amount:</span>
+    <mat-form-field appearance="outline">
+      <mat-select   [(value)]="selectedAmount">
+        <mat-option *ngFor="let amountItem of amountItems" [value]="amountItem">
+          {{amountItem}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+
   <div class="button-container">
-    <app-add-cart-button [amount]="1" [productId]="product.id" ></app-add-cart-button>
+    <app-add-cart-button [amount]="selectedAmount" [productId]="product.id" ></app-add-cart-button>
   </div>
 </div>
