--- a/src/app/components/add-cart-button/add-cart-button.component.html
+++ b/src/app/components/add-cart-button/add-cart-button.component.html
@@ -1,1 +1,3 @@
-<button (click)="addToCart()" mat-flat-button>Add to cart</button>
+<div class="add-cart-button">
+  <button (click)="addToCart()"  mat-flat-button>Add to cart</button>
+</div>
