--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -1,3 +1,9 @@
-<div>
-  <app-card-form></app-card-form>
+<div class="checkout-container">
+  <div>
+    <app-card-form></app-card-form>
+  </div>
+  <div class="right-container">
+    <app-summary></app-summary>
+    <app-coupon></app-coupon>
+  </div>
 </div>
