--- a/src/app/pages/cart/cart.component.scss
+++ b/src/app/pages/cart/cart.component.scss
@@ -53,3 +53,15 @@
   font-size: 16px;
   margin-right: 12px;
 }
+
+.submit-container {
+  display: flex;
+  justify-content: end;
+  margin-top: 24px;
+
+  ::ng-deep .mdc-button{
+    width: 230px;
+    background-color: #0086ff;
+    color: #fff;
+  }
+}
