--- a/src/app/components/coupon/coupon.component.html
+++ b/src/app/components/coupon/coupon.component.html
@@ -1,8 +1,12 @@
 <div class="coupon-container">
   <h3 class="title">Enter a promotional code</h3>
 
-  <mat-form-field appearance="outline">
-    <mat-label>Promotional code</mat-label>
-    <input matInput [(ngModel)]="code">
-  </mat-form-field>
+  <div class="d-flex" >
+    <mat-form-field appearance="outline">
+      <mat-label>Promotional code</mat-label>
+      <input matInput type="number" [(ngModel)]="code">
+    </mat-form-field>
+
+    <button mat-flat-button (click)="setDiscount()" >Apply</button>
+  </div>
 </div>
