--- a/src/app/components/coupon/coupon.component.scss
+++ b/src/app/components/coupon/coupon.component.scss
@@ -4,6 +4,19 @@
   border-radius: 8px;
   padding: 16px 16px 0;
   margin-top: 12px;
+
+  mat-form-field {
+    width: 70%;
+  }
+
+  ::ng-deep .mdc-button{
+    width: calc(30% - 12px);
+    height: 56px;
+    background-color: #0086ff;
+    color: #fff;
+
+    margin-left: 12px;
+  }
 }
 
 .title {
