--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -7,3 +7,6 @@
     <app-coupon [summary]="summary"></app-coupon>
   </div>
 </div>
+<div class="confirm-container">
+  <button  mat-flat-button>Confirm</button>
+</div>
