--- a/src/app/components/card-form/card-form.component.html
+++ b/src/app/components/card-form/card-form.component.html
@@ -20,8 +20,8 @@
     <input matInput placeholder="xxx" formControlName="cvv" mask="000">
   </mat-form-field>
 
-  <div class="submit-container">
+  <!-- <div class="submit-container">
     <button  mat-flat-button>Add to cart</button>
-  </div>
+  </div> -->
 
 </form>
