--- a/src/app/components/card-form/card-form.component.html
+++ b/src/app/components/card-form/card-form.component.html
@@ -5,19 +5,19 @@
 <form [formGroup]="cardFormGroup" class="form">
   <mat-form-field appearance="outline">
     <mat-label>Card Number</mat-label>
-    <input matInput placeholder="xxxx xxxx xxxx xxxx" formControlName="number" mask="0000 0000 0000 0000">
+    <input (keyup)="Validate()" matInput placeholder="xxxx xxxx xxxx xxxx" formControlName="number" mask="0000 0000 0000 0000">
   </mat-form-field>
   <mat-form-field appearance="outline">
     <mat-label>Name on card</mat-label>
-    <input matInput formControlName="name">
+    <input (keyup)="Validate()" matInput formControlName="name">
   </mat-form-field>
   <mat-form-field appearance="outline">
     <mat-label>Expiration date</mat-label>
-    <input matInput placeholder="xx/xx" formControlName="dueDate" mask="00/00">
+    <input (keyup)="Validate()" matInput placeholder="xx/xx" formControlName="dueDate" mask="00/00">
   </mat-form-field>
   <mat-form-field appearance="outline">
     <mat-label>CVV</mat-label>
-    <input matInput placeholder="xxx" formControlName="cvv" mask="000">
+    <input (keyup)="Validate()" matInput placeholder="xxx" formControlName="cvv" mask="000">
   </mat-form-field>
 
   <!-- <div class="submit-container">
