--- a/src/app/pages/checkout/checkout.component.scss
+++ b/src/app/pages/checkout/checkout.component.scss
@@ -1,6 +1,7 @@
 .checkout-container {
   display: flex;
   justify-content: center;
+  padding: 16px 0;
 }
 
 .right-container {
@@ -12,7 +13,11 @@
   margin: 0 auto;
   ::ng-deep .mdc-button{
     width: 100%;
-    background-color: #0086ff;
-    color: #fff;
+
+    &:not([disabled]) {
+      background-color: #0086ff;
+      color: #fff;
+    }
+
   }
 }
