--- a/src/app/components/item/item.component.html
+++ b/src/app/components/item/item.component.html
@@ -1,11 +1,11 @@
-<div class="item-container d-flex justify-content-between">
+<div class="item-container d-flex justify-content-between"  [class.changable]="changable">
   <app-item-image [url]="item.product.image.url" [alt]="item.product.image.alt" ></app-item-image>
 
   <div class="item-title-container">
     <span>{{item.product.title}}</span>
   </div>
   <div class="item-amount-container">
-    <span *ngIf="item.amount === 0; else selectAmount">{{item.amount}}</span>
+    <span *ngIf="item.amount === 0 || !changable; else selectAmount">{{item.amount}}</span>
     <ng-template #selectAmount>
       <div class="amount-select">
         <mat-form-field appearance="outline">
@@ -22,7 +22,7 @@
     <span>{{item.totalPrice | currency}} </span>
   </div>
 
-  <div class="d-flex justify-content-center align-items-center">
+  <div *ngIf="changable" class="d-flex justify-content-center align-items-center">
     <fa-icon matTooltip="Remove from cart" matTooltipPosition="above" *ngIf="item.amount > 0" class="trash-icon" [icon]="faTrash" size="lg" (click)="RemoveItem()"></fa-icon>
   </div>
 </div>
