--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -8,5 +8,5 @@
   </div>
 </div>
 <div class="confirm-container">
-  <button [disabled]="disabled" mat-flat-button>Confirm</button>
+  <button [routerLink]="'/confirmation'" [disabled]="disabled" mat-flat-button>Confirm</button>
 </div>
