--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -6,7 +6,7 @@
       <fa-icon [routerLink]="'cart'" class="cart-icon" [icon]="faCartShopping" size="2xl"></fa-icon>
     </div>
     <div class="user-container">
-      <fa-icon class="user-icon" [icon]="faUser" size="2xl"></fa-icon>
+      <fa-icon [routerLink]="'user'" class="user-icon" [icon]="faUser" size="2xl"></fa-icon>
     </div>
   </div>
 </div>
