--- a/src/app/components/carousel/carousel.component.scss
+++ b/src/app/components/carousel/carousel.component.scss
@@ -16,7 +16,7 @@
   img {
     width: 100%;
     height: 100%;
-    object-fit: fill;
+    object-fit: contain;
   }
 }
 
@@ -29,6 +29,7 @@
 
   .title {
     font-size: 40px;
+    line-height: 40px;
     font-weight: 700;
     margin: 0;
   }
