--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -6,7 +6,10 @@
       <fa-icon [routerLink]="'cart'" class="cart-icon" [icon]="faCartShopping" size="2xl"></fa-icon>
     </div>
     <div class="user-container">
-      <fa-icon [routerLink]="'user'" class="user-icon" [icon]="faUser" size="2xl"></fa-icon>
+      <fa-icon *ngIf="!authenticated; else userIcon" [routerLink]="'login'" class="user-icon" [icon]="faRightToBracket" size="2xl"></fa-icon>
+      <ng-template #userIcon>
+        <fa-icon [routerLink]="'user'" class="user-icon" [icon]="faUser" size="2xl"></fa-icon>
+      </ng-template>
     </div>
   </div>
 </div>
