--- a/src/app/components/coupon/coupon.component.html
+++ b/src/app/components/coupon/coupon.component.html
@@ -4,7 +4,8 @@
   <div class="d-flex" >
     <mat-form-field appearance="outline">
       <mat-label>Promotional code</mat-label>
-      <input matInput type="number" [(ngModel)]="code">
+      <input matInput type="text" [(ngModel)]="coupon">
+      <mat-hint>Example: Discount 20</mat-hint>
     </mat-form-field>
 
     <button mat-flat-button (click)="setDiscount()" >Apply</button>
