--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
-<div class="d-flex flex-column align-items-center w-100 h-100">
+<div class="d-flex flex-column align-items-center">
   <app-navbar></app-navbar>
 
   <div class="main-container">
     <router-outlet></router-outlet>
   </div>
+
+  <app-footer></app-footer>
 
 </div>
 
