--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<div class="d-flex flex-column align-items-center">
+<div class="d-flex flex-column align-items-center main-container">
   <app-navbar></app-navbar>
 
-  <div class="main-container">
+  <div class="router-container">
     <router-outlet></router-outlet>
   </div>
 
