--- a/src/app/components/carousel/carousel.component.html
+++ b/src/app/components/carousel/carousel.component.html
@@ -2,14 +2,12 @@
 	<ng-template ngbSlide *ngFor="let product of products">
     <div class="slide-container">
       <div class="image-container">
-        <img [src]="product.image.url" [alt]="product.image.alt" />
+        <img [src]="product.thumbnail" [alt]="product.title" />
       </div>
       <div class="text-container">
         <h3 class="title">{{product.title}}</h3>
         <div class="values-container">
-          <span class="discount">{{product.price.discount}}% OFF</span>
-          <span class="original-value">{{product.price.originalValue | currency}}</span>
-          <span class="value">{{product.price.value | currency}}</span>
+          <span class="value">{{product.price | currency}}</span>
         </div>
       </div>
     </div>
