--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-between">
-  <app-details-image [url]="product.image.url" [alt]="product.image.alt" ></app-details-image>
+  <app-details-image [url]="product.images[0]" [alt]="product.title" ></app-details-image>
   <app-details-infos [product]="product" ></app-details-infos>
 </div>
 
