--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,2 +1,3 @@
+<app-search-input (searchString)="SearchString($event)"></app-search-input>
 <app-carousel></app-carousel>
-<app-product-list></app-product-list>
+<app-product-list [products]="products"></app-product-list>
