Register page and form | Cep service

--- a/src/app/components/login-form/login-form.component.html
+++ b/src/app/components/login-form/login-form.component.html
@@ -16,4 +16,6 @@
     <button (click)="Validate()" mat-flat-button>Login</button>
   </div>
 
+  <a class="mt-3" routerLink="/register">Don't have an account? Register now</a>
+
 </form>
