--- a/src/app/components/register-form/register-form.component.html
+++ b/src/app/components/register-form/register-form.component.html
@@ -1,9 +1,9 @@
 <div class="register-container">
   <h3 class="title">Register</h3>
-  <form [formGroup]="registerFormGroup" class="form">
+  <form [formGroup]="registerFormGroup" class="form" (submit)="Validate()">
     <mat-form-field appearance="outline">
       <mat-label>Full Name</mat-label>
-      <input matInput formControlName="name">
+      <input matInput formControlName="firstName">
     </mat-form-field>
     <mat-form-field appearance="outline">
       <mat-label>E-mail</mat-label>
@@ -49,9 +49,9 @@
       </mat-form-field>
     </div>
 
-    <!-- <div class="submit-container">
-      <button  mat-flat-button>Add to cart</button>
-    </div> -->
+    <div class="submit-container">
+      <button type="submit" mat-flat-button>Create User</button>
+    </div>
 
   </form>
 </div>
