--- a/src/app/components/register-form/register-form.component.scss
+++ b/src/app/components/register-form/register-form.component.scss
@@ -32,3 +32,13 @@
   }
 
 }
+
+.submit-container {
+  width: 100%;
+
+  ::ng-deep .mdc-button{
+    width: 100%;
+    background-color: #0086ff;
+    color: #fff;
+  }
+}
