--- a/src/app/components/register-form/register-form.component.html
+++ b/src/app/components/register-form/register-form.component.html
@@ -48,6 +48,8 @@
         <input matInput formControlName="complement">
       </mat-form-field>
     </div>
+    <mat-checkbox formControlName="privacyPolicies">I agree with the privacy policies</mat-checkbox>
+    <mat-checkbox formControlName="personalData">I agree with using my personal data</mat-checkbox>
 
     <div class="submit-container">
       <button type="submit" mat-flat-button>Create User</button>
