--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -1,4 +1,9 @@
 
 <div class="list-container">
-  <app-admin-products-list></app-admin-products-list>
+  <mat-button-toggle-group value="products" (change)="onChange($event)" class="button-group">
+    <mat-button-toggle value="products">Products</mat-button-toggle>
+    <mat-button-toggle value="users">Users</mat-button-toggle>
+  </mat-button-toggle-group>
+
+  <app-admin-products-list *ngIf="listType === 'products'"></app-admin-products-list>
 </div>
