Admin users list

--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -6,4 +6,6 @@
   </mat-button-toggle-group>
 
   <app-admin-products-list *ngIf="listType === 'products'"></app-admin-products-list>
+  <app-admin-users-list *ngIf="listType === 'users'"></app-admin-users-list>
+
 </div>
